--- a/package.json
+++ b/package.json
@@ -3,46 +3,39 @@
   "version": "1.0.1",
   "private": true,
   "author": {
-    "name": "Sanidhya Kumar Verma",
-    "email": "sanidhya.verma12345@gmail.com",
-    "url": "https://github.com/sanidhyy"
+    "name": "Дмитрий Ушаков",
+    "email": "ushako160696@gmail.com",
+    "url": "https://github.com/UshakovDev"
   },
-  "description": "Ethan Smith is a Full-stack web developer with 10+ years of experience.",
+  "description": "Дмитрий Ушаков - веб-разработчик с опытом работы с Bitrix, React, Python, PHP. Специализируюсь на создании решений, которые работают.",
   "keywords": [
+    "веб-разработчик",
+    "bitrix",
     "react",
-    "next",
+    "python",
+    "php",
+    "mysql",
+    "postgresql",
+    "docker",
+    "nginx",
+    "fullstack",
+    "портфолио",
+    "разработка сайтов",
     "nextjs",
-    "html",
-    "css",
     "javascript",
-    "js",
-    "modern-ui",
-    "modern-ux",
-    "portfolio",
-    "framer-motion",
-    "3d-website",
-    "particle-effect"
+    "framer-motion"
   ],
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sanidhyy/modern-portfolio.git"
+    "url": "https://github.com/UshakovDev/portfolio.git"
   },
-  "homepage": "https://github.com/sanidhyy/modern-portfolio#readme",
+  "homepage": "https://github.com/UshakovDev/portfolio#readme",
   "bugs": {
-    "url": "https://github.com/sanidhyy/modern-portfolio/issues",
-    "email": "sanidhya.verma12345@gmail.com"
+    "url": "https://github.com/UshakovDev/portfolio/issues",
+    "email": "ushako160696@gmail.com"
   },
-  "funding": [
-    {
-      "type": "patreon",
-      "url": "https://www.patreon.com/sanidhy"
-    },
-    {
-      "type": "Buy me a coffee",
-      "url": "https://www.buymeacoffee.com/sanidhy"
-    }
-  ],
+  "funding": [],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
