feat(config): настройка конфигурации для статического экспорта на GitHub Pages
- Добавлены параметры для статического экспорта в next.config.js
- Отключена оптимизация изображений для поддержки статического экспорта
- Установлены базовый путь и префикс ассетов для GitHub Pages
- Добавлена команда для экспорта и сборки проекта в package.json

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export",
+    "build:gh": "next build && next export && rm -rf docs && cp -r out docs"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
